--- a/jiarunHomePage.css
+++ b/jiarunHomePage.css
@@ -4,3 +4,9 @@ img {
     max-width: 180px;
     max-height: 272px;
 }
+.bg-light{
+	background-color: #708090;
+}
+.navbar-light{
+	background-color: #708090;
+}
